--- a/FirstApp/src/app/my-container/topnav/topnav.component.html
+++ b/FirstApp/src/app/my-container/topnav/topnav.component.html
@@ -1,6 +1,7 @@
 <div class="topnavbar">
     <h2>MOHAMMED AATHIF</h2>
-    <div class="boxes">
-    <a href="#">About Me</a>
+    <div class="content">
+        Hello !! My name is Mohammed Aathif pursuing in b.tech Information Technology at saveetha university chennai.
     </div>
+    
 </div>
