--- a/FirstApp/src/app/my-container/my-container.component.html
+++ b/FirstApp/src/app/my-container/my-container.component.html
@@ -1,2 +1,11 @@
-<h2>Dedalus..!!</h2>
+<div class="service-box">
+    <h3> Service Title</h3>
+    <p>
+      Service description.  Service description.
+      Service description. Service description. Service description. Service description.
+      Service description. Service description. Service description.
+      Service description. Service description.
+      Service description. Service description..
+    </p>
+  </div>
 
