--- a/FirstApp/src/app/my-container/my-container.component.css
+++ b/FirstApp/src/app/my-container/my-container.component.css
@@ -1,7 +1,19 @@
-h2{
-    background-color: blue;
-    color: aliceblue;
-    padding-bottom: 5px;
-    margin: 0px;
-    text-align: center;
+.service-box{
+    height:250px;
+    width: 320px;
+    margin: 20px;
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: rgb(38, 38, 70);
+    color: white;
+    float: left;
+}
+
+h3{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: gray;
 }
