--- a/FirstApp/src/app/my-container/topnav/topnav.component.html
+++ b/FirstApp/src/app/my-container/topnav/topnav.component.html
@@ -1,7 +1,12 @@
-<div class="topnavbar">
-    <h2>MOHAMMED AATHIF</h2>
-    <div class="content">
-        Hello !! My name is Mohammed Aathif pursuing in b.tech Information Technology at saveetha university chennai.
+<div class="about">
+    <div class="title">
+         <h3> About Us </h3>
     </div>
-    
+    <div class="content">
+        {{content}}
+        <li *ngFor="let x of servicelist">{{x}}</li>
+    </div>
+    <div class="image">
+        <img src="http://localhost/company.gif">
+    </div>
 </div>
