--- a/20 April 2023 (Task)/app/src/app/common/navbar/navbar.component.html
+++ b/20 April 2023 (Task)/app/src/app/common/navbar/navbar.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar class="logo">
     <span>K.M.A Private Limited</span>
+    <div class="tab">
+    <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/feedback">FeedBack</a></li>
+    </ul>
+    </div>
 </mat-toolbar>
