--- a/20 April 2023 (Task)/app/src/app/common/navbar/navbar.component.css
+++ b/20 April 2023 (Task)/app/src/app/common/navbar/navbar.component.css
@@ -9,3 +9,31 @@ span{
     font-style: oblique;
     font-size: 24px;
 }
+ul{
+    display: flex;
+    margin-left: 50px;
+    
+}
+li{
+    float: left;
+    list-style-type: none;
+    margin-left: 10px;
+    margin-right: 20px;   
+}
+a{
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 20px;
+    border: 1px solid white;
+    border-radius: 6px;
+    padding: 5px;
+}
+a:active{
+    color:rgb(255, 174, 76);
+}
+.tab{
+    float: right;
+    
+}
