--- a/20 April 2023 (Task)/app/src/app/common/navbar/navbar.component.html
+++ b/20 April 2023 (Task)/app/src/app/common/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <span>K.M.A Private Limited</span>
     <div class="tab">
     <ul>
-        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/shop">Home</a></li>
         <li><a routerLink="/feedback">FeedBack</a></li>
     </ul>
     </div>
