--- a/20 April 2023 & 21 April 2023 (Task)/app/src/app/feedback/feedback.component.css
+++ b/20 April 2023 & 21 April 2023 (Task)/app/src/app/feedback/feedback.component.css
@@ -1,60 +1,64 @@
+#form{
+    width: 400px;
+    height: 550px;
+    border: 2px solid rgb(3, 3, 94);
+    margin-left: 550px;
+    border-radius: 10px;
+    margin-top: 20px;
+    background-color: rgb(3, 3, 94);
+}
+h1{
+    color: rgb(3, 3, 94);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+    font-size: 22px;
+    background-color: white;
+    border-radius: 10px;
+}
+.ele{
+    margin-left: 40px;
+}
+h3{
+   font-size: 20px;
+   font-family: 'Times New Roman', Times, serif;
+   color: white;
+   margin-right: 20px;
+}
 .formbox{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
-    /* float: left; */
-   align-items: center;
-    margin: 5px;
-    margin-right: 50px;
-    display: flex;
+    padding-bottom: 20px;
+    
 }
-
-
-.formbox h3{
-    margin-right: 30px;
-}
-
-.prdlbl
-{
-    margin-right: 30px;
-}
-.formbox input[type="text"],.formbox input[type="email"]{
-   
-    width: 200px;
-    height: 30px;
-    /* padding: 10px ; */
+.formbox input[type="text"]{
+    width:300px;
+    height:30px;
     display: flex;
     justify-content: center;
-   
 }
-
+.formbox input[type="email"]{
+    width:300px;
+    height:30px;
+    display: flex;
+    justify-content: center;
+}
 textarea{
-    width: 400px;
-    height: 100px;
-    border: 2px solid white;
+    width:300px;
+    height:100px;
+    display: flex;
+    justify-content: center;
+}
+.example-full-width{
+    width:310px;
+    height:70px;
+    display: flex;
+    justify-content: center;
+
+}
+.btn-primary{
+    margin-left: 100px;
+    margin-top: 20px;
 }
 
-#form{
-    margin-top: 30px;
-    padding: 50px;
-    background-color:black;
-    overflow: hidden;
-    color: white;
-    border: 2px solid green;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    align-items: center;
-}
 
-li{
-    color: darkred;
-}
 
-input[type="text"]
-{
-    width:100px;
-}
-
-.example-full-width
-{
-    margin-left: 110px;
-    padding-top:10px ;
-}
