--- a/20 April 2023 & 21 April 2023 (Task)/app/src/app/page/shop/shop-box/shop-box.component.html
+++ b/20 April 2023 & 21 April 2023 (Task)/app/src/app/page/shop/shop-box/shop-box.component.html
@@ -1,3 +1,4 @@
+<a routerLink="products/{{products.id}}">
 <mat-card class="service">
     <div class="id">
         <p>{{products.name}}</p>
@@ -14,3 +15,4 @@
         <span>{{products.type}}</span>
     </div>
 </mat-card>
+</a>
